--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,10 @@
     {% block corecss %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
@@ -38,30 +42,28 @@
 
 <body>
     <header class="container-fluid fixed-top">
-        <div id="topnav" class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+        <div id="topnav" class="row bg-black pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <form action="GET" action="#">
+                <form action="#" method="GET">
                     <div class="input-group w-100">
-                        <input type="text" class="form-control border border-white rounded-0" name="q" placeholder="Search our site">
+                        <input type="text" class="form-control border border-black rounded-0" name="q" placeholder="Search our site">
                         <div class="input-group-append">
-                            <button class="form-control btn btn-black border border-white rounded-0" type="submit">
+                            <button class="form-control btn btn-white border border-white rounded-0" type="submit">
                                 <span class="icon">
-                                    <i class="fas fa-search"></i>
+                                    <i class="fas fa-search" style="color: white;"></i>
                                 </span>
                             </button>
                         </div>
                     </div>
                 </form>
             </div>
-            <div class="row bg-black pt-lg-2 d-none d-lg-flex">
-                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                    <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                        <h2 class="logo-font text-white my-0"><strong>Modern</strong> Minimalist</h2>
-                    </a>
-                </div>
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+                <a href="{% url 'home' %}" class="nav-link-main-logo-link">
+                    <h2 class="logo-font text-white my-0"><strong>Modern</strong> Minimalist</h2>
+                </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                <ul class="list-inline list-unstyled text-center text-lg-end my-0">
                     <li class="list-inline-item dropdown">
                         <a href="#" class="text-white nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
@@ -83,7 +85,7 @@
                         </div>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link">
+                        <a href="#" class="{% if grand_total %}text-info font-weight-bold{% else %}text-white{% endif %} nav-link">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                 <p class="my-0">
@@ -110,9 +112,84 @@
         </div>
         <div id="delivery-banner" class="row text-center">
             <div class="col bg-white text-black">
-                <h4 class="logo-font my-1">Free delivery on all orders over €....!</h4>
+                <h4 class="logo-font my-1">Free delivery on all orders over €111</h4>
             </div>
         </div>
+
+        
+        <!-- <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+              <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                <h2 class="logo-font text-black my-0"><strong>Boutique</strong> Ado</h2>
+              </a>
+            </div>
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+              <form method="GET" action="#">
+                <div class="input-group w-100">
+                  <input type="text" class="form-control border border-black rounded-0" name="q" placeholder="Search our site">
+                  <div class="input-group-append">
+                    <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                      <span class="icon">
+                        <i class="fas fa-search"></i>
+                      </span>
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+              <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                <li class="list-inline-item dropdown">
+                  <a href="#" class="text-black nav-link" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <div class="text-center">
+                          <div><i class="fas fa-user fa-lg"></i></div>
+                          <p class="my-0">My Account</p>
+                      </div>
+                  </a>
+                  <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                      {% if request.user.is_authenticated %}
+                        {% if request.user.is_superuser %}
+                          <a href="#" class="dropdown-item">Product Management</a>
+                        {% endif %}
+                        <a href="#" class="dropdown-item">My Profile</a>
+                        <a href="#" class="dropdown-item">Logout</a>
+                      {% else %}
+                        <a href="#" class="dropdown-item">Register</a>
+                        <a href="#" class="dropdown-item">Login</a>
+                      {% endif %} 
+                  </div>
+                </li>
+                <li class="list-inline-item">
+                  <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
+                      <div class="text-center">
+                          <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                          <p class="my-0">
+                              {% if grand_total %}
+                                  ${{ grand_total|floatformat:2 }}
+                              {% else %}
+                                  $0.00
+                              {% endif %}
+                          </p>
+                      </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+        </div>
+          <div class="row bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/main-nav.html' %}
+            </nav>
+          </div>
+          <div id="delivery-banner" class="row text-center">
+            <div class="col bg-black text-white">
+                <h4 class="logo-font my-1">Free delivery on all orders over ${{ free_delivery_threshold }}!</h4>
+            </div>
+          </div> -->
     </header>    
 </body>
 </html>
