updated the classes to align with bootstrap 5 and added an image and some text to the home page

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,7 @@
         </div>
         <div class="row bg-black">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 {% include 'includes/mobile-top-header.html' %}
@@ -191,5 +191,16 @@
             </div>
           </div> -->
     </header>    
+
+    <!-- Add messages here -->
+
+    {% block page_header %}
+    {% endblock %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% block postloadjs %}
+    {% endblock %}
 </body>
 </html>
