--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,8 @@ body {
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
+    background: url('/media/feet-puddle-reflection.jpg') no-repeat center fixed;
+    background-size: cover;
 }
 
 .icon {
@@ -28,6 +30,17 @@ a {
     text-decoration: none;
 }
 
+.text-shadow {
+    text-shadow: 
+    -1px -1px 0 #000,
+    0 -1px 0 #000,
+    1px -1px 0 #000,
+    1px 0 0 #000,
+    1px 1px 0 #000,
+    0 1px 0 #000,
+    -1px 1px 0 #000,
+    -1px 0 0 #000;
+}
 
 /* ------- Media Queries */
 @media (min-width: 992px) {
