--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -113,9 +113,9 @@
             </div>
         </div>
     </div>
-    <div class="btt-button shadow-sm rounded-0 border border-dark">
+    <div class="btt-button shadow-sm rounded-0 border border-light">
         <a class="btt-link d-flex h-100">
-            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+            <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
         </a>
     </div>
 {% endblock %}
