--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,11 +12,16 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container-fluid h-100 background-image">
+        <!-- <div class=" w-100"></div> -->
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
+            <div class="col-7 col-md-6 ms-5 my-auto mx-auto">
                 <h1 class="display-4 logo-font text-white">
-                     <span class="text-shadow">The new collections are here</span>
+                     <span class="text-shadow">
+                        Our new line<br>
+                        has just<br>
+                        dropped
+                     </span>
                 </h1>
                 <div class="my-5">
                     <h4>
