--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -12,14 +12,14 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
+    <!-- <div class="overlay"></div> -->
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
                 <h2 class="logo-font text-white">Products</h2>
                 {% for c in current_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                        <span class="p-2 mt-2 badge badge-white text-dark rounded-0 border border-dark">{{ c.friendly_name }}</span>
+                        <span class="p-2 mt-2 badge badge-white text-light rounded-0 border border-light">{{ c.friendly_name }}</span>
                     </a>
                 {% endfor %}
                 <hr class="w-50 mb-1 mx-auto">
