--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,9 @@ body {
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
+}
+
+.background-image {
     background: url('/media/homepage.webp') no-repeat center fixed;
     background-size: cover;
 }
