--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
     <title>Modern Minimalist{% block extra_title %}{% endblock %}</title>
 </head>
 
-<body>
+<body class="gradient">
     <header class="container-fluid fixed-top">
         <div id="topnav" class="row bg-black pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
