--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -79,7 +79,7 @@
                                             {% endif %}
                                             {% if request.user.is_superuser %}
                                             <small class="ml-3">
-                                                <a href="#">Edit</a> |
+                                                <a href="{% url 'edit_product' product.slug product.id %}">Edit</a> |
                                                 <a href="#" class="text-danger">Delete</a>
                                             </small>
                                             {% endif %}
